welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: illegal start of simple expression
  if (a<=19 && a>=13);a = 1
                     ^countTeen:3: error: illegal start of simple expression
  if (b<=19 && b>=13);b = 1
                     ^countTeen:4: error: illegal start of simple expression
  if (c<=19 && c>=13);c = 1
                     ^countTeen:5: error: illegal start of simple expression
  if (d<=19 && d>=13);d = 1
                     ^