welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  if (a<=19 && a>=13);a = 1
  if (b<=19 && b>=13);b = 1
  if (c<=19 && c>=13);c = 1
  if (d<=19 && d>=13);d = 1
  return a+b+c+d
}